--- a/web-test-1/bs-test.html
+++ b/web-test-1/bs-test.html
@@ -8,12 +8,17 @@
 			padding: 0px;
 			margin: 0px;
 		}
+		footer{
+			height: 100px;
+			background: #ccc;
+		}
 	</style>
-	<link rel="stylesheet" href="bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<script src="jquery.min.js"></script>
-	<script src="bootstrap.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 </head>
 <body>
+<div class="container">
 	<h1 class="">bootstrap练习</h1>
 	<!--栅格系统 -->
 	<div class="rows">
@@ -23,11 +28,78 @@
 			<div class="col-md-3 col-push-9">hhhhha</div>
 		</div>
 	</div>
-	************************************
+	<!-- ************************************ -->
 	<h1>hello thank you <mark>java</mark>very much <small>james</small></h1>
 	<p class="lead">this a book talk about html and java and ...</p>
 	<p>this a book talk about html and java and ...</p>
+	<!-- 列表******************************\ -->
+	<ul class="list-inline">
+		<li>football</li>
+		<li>basketball</li>
+		<li>baseball</li>
+	</ul>
+	<dl class="dl-horizontal">
+		<dt>cavs</dt>
+		<dd>lebron lebron lebron lebron lebron lebron lebron lebron lebron lebron lebron lebron lebron lebron lebron lebron lebron lebron lebron lebron lebron lebron lebron lebron ebron lebronebron lebronebron lebronebron lebronebron lebronebron lebronebron lebronebron lebronebron lebronebron lebronebron lebronebron lebronebron lebron</dd>
+		<dt>lakers</dt>
+		<dd>kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe kobe </dd>
+	</dl>
+	<table class="table table-striped table-bordered table-hover">
+		<tr>
+			<th class="info">name</h>
+			<th class="danger">age</th>
+		</tr>
+
+		<tr class="success">
+			<td>lebron</td>
+			<td>23</td>
+		</tr>
+		<tr class="active">
+			<td>kobe</td>
+			<td class="warning">24</td>
+		</tr>
+	</table>
+	<!-- 表单*************************************** -->
+	<form class="form-inline">
+	  <div class="form-group">
+	    <label for="exampleInputEmail1">Email address</label>
+	    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+	  </div>
+	  <div class="form-group">
+	  	<label for="">username
+	  		<input class="form-control" type="text">
+	  	</label>
+	  </div>
+	  
+	</form>
+	<h1>这有个超链接</h1>
+	<div class="bg-success">
+			<a class="" href="#content">Skip to main content</a>
+	</div>
+	<button type="button" class="btn btn-default btn-lg">
+  		<span class="glyphicon glyphicon-flash" aria-hidden="true"></span> Star
+	</button>
+	<!-- ******************组件练习*************** -->
+	<!-- 1.下拉菜单 -->
+	<div class="dropdown">
+  		<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    	选择语言
+    		<span class="caret"></span>
+  		</button>
+  		<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+		    <li><a href="#">java</a></li>
+		    <li><a href="#">python</a></li>
+		    <li><a href="#">php</a></li>
+		    <li role="separator" class="divider"></li>
+		    <li><a href="#">others</a></li>
+  		</ul>
+	</div>
+<footer>
+</footer>
+</div>
+
 </body>
+
 <script>
 	
 </script>
