--- a/web-test-1/bs-test.html
+++ b/web-test-1/bs-test.html
@@ -93,7 +93,115 @@
 		    <li role="separator" class="divider"></li>
 		    <li><a href="#">others</a></li>
   		</ul>
-	</div>
+  		<!-- Single button -->
+		<div class="btn-group">
+		  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		    Action <span class="caret"></span>
+		  </button>
+		  <ul class="dropdown-menu">
+		    <li><a href="#">Action</a></li>
+		    <li><a href="#">Another action</a></li>
+		    <li><a href="#">Something else here</a></li>
+		    <li role="separator" class="divider"></li>
+		    <li><a href="#">Separated link</a></li>
+		  </ul>
+		</div>
+		<!-- ********导航**********8 -->
+	<nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
+	  <div class="container-fluid">
+	    <!-- Brand and toggle get grouped for better mobile display -->
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="#">导航菜单</a>
+	    </div>
+
+	    <!-- Collect the nav links, forms, and other content for toggling -->
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	      <ul class="nav navbar-nav">
+	        <li class="active"><a href="#">页面 <span class="sr-only">(current)</span></a></li>
+	        <li><a href="#">联系</a></li>
+	      </ul>
+	      <form class="navbar-form navbar-left">
+	        <div class="form-group">
+	          <input type="text" class="form-control" placeholder="点我搜索">
+	        </div>
+	        <button type="submit" class="btn btn-default">搜索</button>
+	      </form>
+	      <ul class="nav navbar-nav navbar-right">
+	        <li><a href="#">登录</a></li>
+	        <li><a href="#">账户</a></li>
+	      </ul>
+	    </div><!-- /.navbar-collapse -->
+	  </div><!-- /.container-fluid -->
+</nav>
+<!-- ***********分页符****** -->
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li>
+      <a href="#" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+      </a>
+    </li>
+    <li><a href="#">1</a></li>
+    <li><a href="#">2</a></li>
+    <li><a href="#">3</a></li>
+    <li>
+      <a href="#" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+      </a>
+    </li>
+  </ul>
+</nav>
+<div class="jumbotron">
+  <h1>我是巨幕</h1>
+  <p>Hello</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">更多</a></p>
+</div>
+<div class="alert alert-danger">我是警告条</div>
+<!-- 自重role属性为说明语义； -->
+<div class="progress">
+  <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+    40%
+  </div>
+</div>
+<div>
+	<ul class="list-group ">
+	  <li class="list-group-item active">
+	    <span class="badge">a</span>
+	    条目一
+	  </li>
+	  <li class="list-group-item">
+	    <span class="badge">b</span>
+	    条目二
+	  </li>
+	</ul>
+</div>
+<!-- *****面板**** -->
+<div class="panel panel-success">
+  <div class="panel-heading">面板head</div>
+  <div class="panel-body">
+    面板body111111111
+  </div>
+  <div class="panel-body">
+    面板body222222222
+  </div>
+  	<ul class="list-group ">
+	  <li class="list-group-item">
+	    <span class="badge">a</span>
+	    条目一
+	  </li>
+	  <li class="list-group-item">
+	    <span class="badge">b</span>
+	    条目二
+	  </li>
+	</ul>
+</div>
+<div class="well well-sm">我在well内，我有点嵌入的样式</div>
 <footer>
 </footer>
 </div>
