--- a/web-test-1/bs-test.html
+++ b/web-test-1/bs-test.html
@@ -12,6 +12,11 @@
 			height: 100px;
 			background: #ccc;
 		}
+		#aa{
+			width:100%;
+			height: 500px;
+			background: #aff;
+		}
 	</style>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<script src="jquery.min.js"></script>
@@ -202,6 +207,50 @@
 	</ul>
 </div>
 <div class="well well-sm">我在well内，我有点嵌入的样式</div>
+<div id="aa">
+	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="firefox-big.jpg" alt="...">
+      <div class="carousel-caption">
+        火狐
+      </div>
+    </div>
+    <div class="item">
+      <img src="opera-big.jpg" alt="...">
+      <div class="carousel-caption">
+        opera
+      </div>
+    </div>
+    ...
+  </div>
+
+  <!-- Controls -->
+	<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+	<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+	<span class="sr-only">Previous</span>
+	</a>
+	<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+	<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+	<span class="sr-only">Next</span>
+	</a>
+</div>
+<div class="item">
+  <img src="..." alt="...">
+  <div class="carousel-caption">
+    <h3>文字说明</h3>
+    <p>详细解释</p>
+  </div>
+</div>
+</div>
+
 <footer>
 </footer>
 </div>
@@ -209,6 +258,6 @@
 </body>
 
 <script>
-	
+	$('.carousel').carousel()
 </script>
 </html>
